examples/test/testpolicy17104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17104
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key3: value41
      key24: value16
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value23
          key35: value39
      podSelector:
        matchLabels:
          key0: value41
